upgrade packages with known vulnerabilities.

--- a/NextflowRunnerClient/Components/PipelineParamFile.razor
+++ b/NextflowRunnerClient/Components/PipelineParamFile.razor
@@ -10,7 +10,7 @@
         <br />
         <p>@status</p>
 
-        <!--@((MarkupString)uploadedFileDetails)-->
+        @* <!--@((MarkupString)uploadedFileDetails)--> *@
         @if (fileSelected)
         {
             <p>
