--- a/NextflowRunnerClient/Shared/NavMenu.razor
+++ b/NextflowRunnerClient/Shared/NavMenu.razor
@@ -30,9 +30,9 @@
 
 @code {
     private bool collapseNavMenu = true;
-
+#nullable enable
     private string? NavMenuCssClass => collapseNavMenu ? "collapse" : null;
-
+#nullable disable
     private void ToggleNavMenu()
     {
         collapseNavMenu = !collapseNavMenu;
